move menu to html

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -10,7 +10,13 @@
   <div class="five fluid ui buttons">
     <div title="More options" class="ui context mini dropdown button">
       <i class="reorder icon"></i>
-      <div id="itemContext" class="menu"></div>
+      <div id="itemContext" class="menu">
+        <div class="item">
+          <a title="Subscribe to annotation" class="disabled subscribe annotation">
+            <i class="rss icon"></i>Subscribe
+          </a>
+        </div>
+      </div>
     </div>
     <div title="Validate annotation" class="ui mini validate annotation button"><i class="green checked checkbox icon"></i></div>
     <div title="Unvalidated annotation" class="ui mini unvalidate annotation button"><i class="yellow empty checkbox icon"></i></div>
