--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -50,6 +50,9 @@
         <a title="Subscribe to selected items" class="disabled requires selected subscribe item">
           <i class="rss icon"></i>Subscribe
         </a>
+        <a title="Publish" class="disabled requires selected publish item">
+          <i class="up icon"></i>Publish
+        </a>
         <a title="Delete selected items" class="disabled requires selected delete item">
           <i class="trash icon"></i> Delete
         </a>
