adding simple history

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -137,7 +137,7 @@
       </div>
       <div class="item">
         <div class="field">
-          <input id="termSearch" type="text" placeholder="Query…" />
+          <input class="query input" id="termSearch" type="text" placeholder="Query…" />
         </div>
       </div>
       <div class="item">
