remove unused id

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -147,7 +147,7 @@
       </div>
       <div class="item">
         <div class="field">
-          <button class="ui blue mini query submit button" id="queryForm">Update</button> &nbsp;
+          <button class="ui blue mini query submit button">Update</button> &nbsp;
         </div>
       </div>
       <div class="item">
