--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -30,7 +30,7 @@
 <div class="ui left very wide browse sidebar">
   <div id="browse" style="width: 100%; height: 98%"></div>
 </div>
-<div class="ui content">
+<div class="ui main">
   <div class="ui grey small menu" style="margin: 2px">
     <a title="Select all" class="select all item">
       <i class="checkmark icon"></i>
