display searches even if there are none

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -85,7 +85,7 @@
     <a title="Toggle item details" class="details toggle item">
       <i class="edit icon"></i>
     </a>
-    <a title="Show query filters" class="ui query toggle item">
+    <a title="Show query options" class="ui query toggle item">
       <i class="filter icon"></i>
       <span id="queryCount"><img src="loading.gif" alt="loading results" /></span>
     </a>
