fixups, adding query result view

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -122,7 +122,7 @@
       <div class="item">
         <div class="field">
           <label for="browseNav">Navigator</label>
-          <select id="browseNav">
+          <select class="query navigation" id="browseNav">
             <option value="">None</option>
             <option value="tree">Tree</option>
             <option value="annotations">Annotations</option>
