--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -125,7 +125,7 @@
           <input type="hidden" class="query navigator" />
           <i class="search icon"></i>
           <div class="menu">
-            <a title="Hide navigator" id="hide" class="navigator item">
+            <a title="Hide navigator" class="navigator item">
               None
             </a>
             <a title="Facet navigator" id="facet" class="navigator item">
