--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -123,7 +123,7 @@
 
         <div title="Select results visualisation" class="ui navigator dropdown">
           <input type="hidden" class="query navigator" />
-          <i class="search icon"></i>
+          <i class="location arrow icon"></i>
           <div class="menu">
             <a title="Hide navigator" class="navigator item">
               None
