edit full query

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -141,6 +141,9 @@
         </div>
       </div>
       <div class="item">
+        <span class="query terminal"><i class="terminal icon"></i></span>
+      </div>
+      <div class="item">
         <div class="field">
           <textarea class="query input terms" style="height: 2em" id="termSearch" placeholder="Query…"></textarea>
         </div>
