fix plugins for jstree

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -140,7 +140,7 @@
           </div>
         </div>
       </div>
-      <div class="item">
+      <div title="Move annotations to query" class="item">
         <span class="query terminal"><i class="terminal icon"></i></span>
       </div>
       <div class="item">
