add debug navigator

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -137,6 +137,9 @@
             <a title="Cluster view" id="cluster" class="navigator item">
               Cluster
             </a>
+            <a title="Debug view" id="debug" class="navigator item">
+              Debug
+            </a>
           </div>
         </div>
       </div>
