replace nvd3 with d3plus

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -117,7 +117,7 @@
   </div>
   <progress class="hidden" id="uploadprogress" min="0" max="100" value="0">0</progress>
 
-  <div class="holder query results" id="uploadItem" style="height: 90%; width: 100%; padding: 0px; overflow: auto">
+  <div class="holder query results" id="uploadItem" style="width: 100%; padding: 0px; overflow: auto">
     <div class="ui grey small menu" style="margin: 0">
       <div class="item">
 
