--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -224,20 +224,23 @@
   </div>
 </div>
 
-<div class="ui annotate modal hidden form">
-  <div class="content">
-    <div class="message">
+<div class="ui annotate modal hidden form segment">
+  <div class="two fields">
+    <div class="field">
       <label for="selectedAnnotations">Annotate selected with:</label>
+      <div class="ui left labeled icon input">
+        <i class="pencil icon"></i>
+        <textarea id="selectedAnnotations" style="height: 10em"></textarea>
+      </div>
     </div>
-    <br />
-    <div class="ui left labeled icon input">
-      <i class="pencil icon"></i>
-      <input id="selectedAnnotations" />
+    <div class="field">
+      <label for="selectedAnnotations">Request annotations from:</label>
+      <select multiple class="team agent user annotators container" style="height: 10em; width: 100%"></select>
     </div>
   </div>
-  <div class="actions">
+  <div class="actions" style="text-align: center">
     <button class="ui button">Cancel</button>
-    <button class="ui confirm annotate button">Yes</button>
+    <button class="ui confirm annotate button">Ok</button>
   </div>
 </div>
 <div class="ui search load modal hidden form">
