adjust help closes vid/patientsense#23

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -288,7 +288,7 @@
 <script src="member.js"></script>
 <script src="index.js"></script>
 
-<div class="query help" style="display: none; width: 400px">
+<div class="query help" style="display: none">
   <div class="help">
     <p>Queries by default search title, content and uri. These fields can also be queried explicitly. Use quotes for phrases. AND, OR and NOT are supported with grouping using (brackets).
     <code>(content:enquire OR title:Presentation*) OR title:bulletin</code></p>
