remove watch. closes vid/patientsense#12 , clean up pubsub messages

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -198,7 +198,7 @@
   <div class="content">
     <table style="width: 100%" id="watchlist">
       <thead>
-        <tr><th></th><th>Match</th><th>Matches</th><th>Last notification</th></tr>
+        <tr><th></th><th>Match</th><th>Matches</th></tr>
       </thead>
       <tbody>
       </tbody>
