only disable indivitual options

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -43,7 +43,7 @@
     <a title="Invert selection" class="select invert item">
       <i class="checkmark sign icon"></i>
     </a>
-    <div title="Selected item options" class="ui requires selected dropdown item">
+    <div title="Selected item options" class="ui dropdown item">
       <i class="reorder icon"></i>
       <div class="menu">
         <div class="header item">
