--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -268,14 +268,14 @@
     </div>
     <div class="two fields">
       <label title="Enter the field that should be searched" for="reconcileField">Field:</label>
-      <select id="reconcileField" style="padding: 4px" class="selected fields" />
+      <select id="reconcileField" style="padding: 4px" class="selected fields"></select>
     </div>
-    <label for="reconcileValues">Values:</label>
-    <div class="ui left labeled icon input">
-      <i class="pencil icon"></i>
+    <br style="clear: both" />
+    <div class="field">
+      <label for="reconcileValues">Values:</label>
       <textarea title="Enter return-seperated values for Field" id="reconcileValues"></textarea>
     </div>
-    <div class="ui notfound message">
+    <div class="ui notfound message" style="height: 10em; overflow: auto">
     </div>
   </div>
   <div class="actions" style="text-align: center">
