add count, uniq

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -272,7 +272,7 @@
     </div>
     <br style="clear: both" />
     <div class="field">
-      <label for="reconcileValues">Values:</label>
+      <label for="reconcileValues">Values (one per line):</label>
       <textarea title="Enter return-seperated values for Field" id="reconcileValues"></textarea>
     </div>
     <div class="ui notfound message" style="height: 10em; overflow: auto">
