confirm update fields

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -280,7 +280,7 @@
       <select id="setReconciledField" style="padding: 4px" class="all fields"></select>
       Separator <select id="reconcileSep" style="padding: 4px"><option value="&lt;tab&gt;">Tab</option><option value="|">|</option><option value=",">,</option></select>
     </div>
-    <div class="ui notfound message" style="height: 10em; overflow: auto">
+    <div class="ui reconcile message" style="height: 10em; overflow: auto">
     </div>
   </div>
   <div class="actions" style="text-align: center">
