add username, change appearance

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -4,6 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link rel="stylesheet" type="text/css" href="lib/libs.css" />
   <link rel="stylesheet" href="dashboard.css" />
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans">
 </head>
 <body>
 <div class="ui details right sidebar">
@@ -108,6 +109,8 @@
     </a>
     <span title="Sign out" class="right menu">
       <a class="signout item">
+        <span class="member name">
+        </span>
         <i class="sign out icon"></i>
       </a>
     </span>
