select y axis for viz

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -44,7 +44,7 @@
     <a title="Invert selection" class="select invert item">
       <i class="checkmark sign icon"></i>
     </a>
-    <div title="Selected item options" class="ui dropdown item">
+    <div title="Selected item options" class="ui dropdown select item">
       <i class="reorder icon"></i>
       <div class="menu">
         <div class="header item">
@@ -71,6 +71,11 @@
       </div>
       <div class="ui red selected label count" style="width: 3em; text-align: center">0</div>
     </div>
+    <a title="Select Y axis data selection" class="visualization y axis" style="display: none">
+      <label for="selectY">X</label>
+      <select style="padding: 4px; margin: 2px" class="selected fields" id="selectY"></select>
+    </a>
+
     <div title="Select results visualisation" class="ui visualization dropdown item">
       <i class="unhide icon"></i>
       <div class="menu">
