--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -180,6 +180,11 @@
           <button class="ui blue mini query submit button">Update</button> &nbsp;
         </div>
       </div>
+      <div class="item">
+        <div class="field">
+          <input id="refresh" type="checkbox"><label for="refresh">Refresh on change</label></button>
+        </div>
+      </div>
     </div>
     <div id="results" style="width: 100%; height: 100%">
     </div>
