x - y axis in scatter

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -71,9 +71,13 @@
       </div>
       <div class="ui red selected label count" style="width: 3em; text-align: center">0</div>
     </div>
-    <a title="Select Y axis data selection" class="visualization y axis" style="display: none">
+    <a title="Select X axis data selection" class="visualization axis" style="display: none">
+      <label for="selectX">X</label>
+      <select style="padding: 4px; margin: 2px" class="selected fields axis" id="selectX"></select>
+    </a>
+    <a title="Select Y axis data selection" class="visualization axis" style="display: none">
       <label for="selectY">X</label>
-      <select style="padding: 4px; margin: 2px" class="selected fields" id="selectY"></select>
+      <select style="padding: 4px; margin: 2px" class="selected fields axis" id="selectY"></select>
     </a>
 
     <div title="Select results visualisation" class="ui visualization dropdown item">
