adding id for login text

--- a/web/site/login.html
+++ b/web/site/login.html
@@ -13,6 +13,9 @@ $(function() {
 });
 </script>
 <% } %>
+<div id="loginPageText">
+</div>
+
 <div class="ui form segment">
   <form method="post" action="login">
     <div class="field">
