removing last search

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -310,7 +310,7 @@
   <div class="content">
     <table style="width: 100%" id="savedSearches">
       <thead>
-        <tr><th></th><th>Name</th><th>Categories</th><th>Hits</th><th>Team</th><th>Input</th><th>Scheduled</th><th>Last run</th></tr>
+        <tr><th></th><th>Name</th><th>Categories</th><th>Hits</th><th>Team</th><th>Input</th><th>Scheduled</th></tr>
       </thead>
       <tbody>
       </tbody>
