ui side validate/unvalidate

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="ui details right sidebar">
-  <div class="five fluid ui buttons">
+  <div class="four fluid ui buttons">
     <div title="More options" class="ui context mini dropdown button">
       <i class="reorder icon"></i>
       <div id="itemContext" class="menu">
@@ -27,9 +27,9 @@
     <div title="Validate annotation" class="ui mini validate annotation button"><i class="green checked checkbox icon"></i></div>
     <div title="Unvalidated annotation" class="ui mini unvalidate annotation button"><i class="yellow empty checkbox icon"></i></div>
     <div title="Erase annotation" class="ui mini erase annotation button"><i class="red eraser icon"></i></div>
-    <div title="New annotation" class="ui mini add button">
+    <!-- <div title="New annotation" class="ui mini add button">
       <i class="add icon"></i>
-    </div>
+    </div>-->
   </div>
   include "./includes/edit-annos.html"
 </div>
